--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "redux-thunk": "^2.4.2",
     "remixicon": "^3.2.0"
   },
+  "homepage": "https://coelhoreinaldo.github.io/trivia-game",
   "scripts": {
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d build",
     "cy": "env CY_CLI=true cypress run",
     "cy:open": "cypress open --e2e --browser chrome",
     "start": "env ESLINT_NO_DEV_ERRORS=true react-scripts start",
@@ -53,6 +56,7 @@
     "@trybe/eslint-config-frontend": "^1.7.1",
     "cypress": "^10.11.0",
     "cypress-multi-reporters": "^1.6.2",
+    "gh-pages": "^5.0.0",
     "jest-localstorage-mock": "2.4.26",
     "mocha": "^10.2.0",
     "mochawesome": "^7.1.3",
